[package]
name = "seccomp-tiny"
version = "0.1.0"
authors = ["Micah Elizabeth Scott <micah@scanlime.org>"]
edition = "2018"

[dependencies]

sc = "0.2.3"

[dev-dependencies]

compiler_builtins = { version = "0.1.36", features = [ "compiler-builtins", "mem" ] }
memoffset = "0.5.6"

[profile.release]
lto = 'fat'
codegen-units = 1
incremental = false
panic = 'abort'
opt-level = 's'

[profile.dev]
lto = 'fat'
codegen-units = 1
incremental = false
panic = 'abort'
opt-level = 's'
